# sim-im

./: .gitignore  CMakeLists.txt  config.h.cmake  he.py  header.tmpl  sim.vcxproj  sim.vcxproj.filters  sim_vs_2010.sln  sim_vs_2012.sln
cmake/: SimPlugins.cmake  cmake_make_dist.cmake.in
doc/weather/: xoap_old_xml_working.txt
plugins/__homedir/: __homedir.vcxproj  __homedir.vcxproj.filters  homedir.cpp
plugins/__migrate/: __migrate.vcxproj  __migrate.vcxproj.filters
plugins/_core/: CMakeLists.txt  _core.vcxproj  _core.vcxproj.filters  clientsdialog.cpp  clientsdialog.h  clientsdialog.ui  commonstatus.cpp  commonstatus.h  core.cpp  core.h  logindlg.cpp  mainwin.cpp  mainwin.h  msgedit.cpp  msgview.cpp  msgview.h  newprotocol.cpp  newprotocol.h  newprotocolbase.ui  profileselectdialog.cpp  profileselectdialog.h
plugins/about/: about.vcxproj  about.vcxproj.filters
plugins/action/: action.vcxproj  action.vcxproj.filters
plugins/autoaway/: autoaway.vcxproj  autoaway.vcxproj.filters
plugins/background/: background.vcxproj  background.vcxproj.filters
plugins/dock/: dock.vcxproj  dock.vcxproj.filters
plugins/filter/: filter.vcxproj  filter.vcxproj.filters
plugins/floaty/: floaty.vcxproj  floaty.vcxproj.filters
plugins/forward/: forward.vcxproj  forward.vcxproj.filters
plugins/gpg/: gpg.vcxproj  gpg.vcxproj.filters
plugins/history/: CMakeLists.txt  history.rc  history.vcxproj  history.vcxproj.filters  historybrowser.cpp  historybrowser.h  historybrowser.ui  historyplugin.cpp  historyplugin.h  historystorage.cpp  historystorage.h  sqlitehistorystorage.cpp  sqlitehistorystorage.h
plugins/history/tests/: test.cpp  testhistoryplugin.cpp
plugins/history/tests/mocks/: mockhistorystorage.h
plugins/icons/: icons.vcxproj  icons.vcxproj.filters
plugins/icq/: CMakeLists.txt  authorizationsnachandler.cpp  bartsnachandler.cpp  icbmsnachandler.cpp  icbmsnachandler.h  icq.cpp  icq.h  icq.vcxproj  icq.vcxproj.filters  icqclient.cpp  icqclient.h  icqcontact.cpp  icqcontact.h  icqgroup.cpp  icqgroup.h  icqloginwidget.cpp  icqloginwidget.h  icqloginwidget.ui  icqmessagefactory.cpp  locationsnachandler.cpp  metainfosnachandler.cpp  servicesnachandler.cpp  ssisnachandler.cpp
plugins/jabber/: CMakeLists.txt  jabber.cpp  jabber.h  jabber.vcxproj  jabber.vcxproj.filters  jabberclient.cpp  jabberclient.h  jabbercontact.cpp  jabbercontact.h  jabbergroup.cpp  jabberstatuswidget.cpp  jabberstatuswidget.h
plugins/jabber/network/: jabbersocket.h  standardjabbersocket.cpp  standardjabbersocket.h
plugins/jabber/protocol/: inputstreamdispatcher.cpp  inputstreamdispatcher.h  iqcontroller.cpp  iqcontroller.h  iqrequest.cpp  iqrequest.h  jabberauthenticationcontroller.cpp  jabberauthenticationcontroller.h  taghandler.cpp  taghandler.h  xmlelement.cpp  xmlelement.h
plugins/jabber/protocol/stanzas/: xmlstanza.h
plugins/jabber/tests/: test.cpp  testinputstreamdispatcher.cpp  testjabberauthenticationcontroller.cpp
plugins/jabber/tests/mocks/: mockjabbersocket.h  mocktaghandler.h
plugins/jabber/ui/: jabberloginwidget.cpp  jabberloginwidget.h  jabberloginwidget.ui
plugins/livejournal/: livejournal.vcxproj  livejournal.vcxproj.filters
plugins/logger/: logger.vcxproj  logger.vcxproj.filters
plugins/msn/: msn.vcxproj  msn.vcxproj.filters
plugins/navigate/: navigate.vcxproj  navigate.vcxproj.filters
plugins/netmonitor/: netmonitor.vcxproj  netmonitor.vcxproj.filters
plugins/ontop/: ontop.vcxproj  ontop.vcxproj.filters
plugins/osd/: osd.vcxproj  osd.vcxproj.filters
plugins/proxy/: proxy.vcxproj  proxy.vcxproj.filters
plugins/remote/: remote.vcxproj  remote.vcxproj.filters  simctrl.vcxproj  simctrl.vcxproj.filters  simext.vcxproj  simext.vcxproj.filters  simipc.vcxproj  simipc.vcxproj.filters  simremote.vcxproj  simremote.vcxproj.filters
plugins/replace/: replace.vcxproj  replace.vcxproj.filters
plugins/shortcuts/: shortcuts.vcxproj  shortcuts.vcxproj.filters
plugins/sms/: sms.vcxproj  (+1 more)
sim/: CMakeLists.txt  buffer.h  cfg.cpp  cfg.h  clientmanager.h  plugins.cpp  plugins.h  propertyhub.cpp  services.cpp  services.h  sim.cpp  sim.rc  sim_pch.h  simapi.h  simfs.cpp  standardclientmanager.cpp  standardprofilemanager.cpp  standardprofilemanager.h  translit.cpp
sim/clients/: client.cpp  client.h  clientmanager.cpp  clientmanager.h  clientuserdata.cpp  standardclientmanager.cpp  standardclientmanager.h
sim/commands/: commandhub.cpp  simtoolbar.cpp
sim/contacts/: client.h  contact.cpp  contact.h  contactlist.cpp  contactlist.h  group.cpp  group.h  protocol.cpp  protocol.h  protocolmanager.cpp  protocolmanager.h  standardcontactlist.cpp  standardcontactlist.h  userdata.cpp
sim/events/: actioncollectionevent.cpp  actioncollectionevent.h
sim/imagestorage/: avatarstorage.cpp  avatarstorage.h  iconset.h  imagestorage.h  jispiconset.cpp  jispiconset.h  standardavatarstorage.cpp  standardavatarstorage.h  standardimagestorage.cpp  standardimagestorage.h
sim/messaging/: genericmessage.cpp  genericmessage.h  standardmessageoutpipe.cpp  standardmessagepipe.cpp
sim/plugin/: plugin.cpp  plugin.h  pluginmanager.cpp  pluginmanager.h
sim/profile/: profile.cpp  profile.h  profilemanager.cpp  profilemanager.h  standardprofilemanager.cpp
sim/simapp/: simapp.cpp  simapp.h
sim/simgui/: genericmessageeditor.cpp  genericmessageeditor.h
sim/tests/: simlib-testing.h  testclientmanager.cpp  testcontact.cpp  testgroup.cpp  teststandardavatarstorage.cpp  teststandardcontactlist.cpp  teststandardmessageoutpipe.cpp  teststandardprofilemanager.cpp
sim/tests/mocks/: mockavatarstorage.h  mockclient.h  mockclientmanager.h  mockimagestorage.h  mockprofilemanager.h
sim/tests/stubs/: stubclient.h  stubimagestorage.h  stubimgroup.h
testing/: gmock.vcxproj  gmock.vcxproj.filters  gmock_coretest.vcxproj  gmock_coretest.vcxproj.filters  gmock_icqtest.vcxproj  gmock_icqtest.vcxproj.filters  gmock_jabbertest.vcxproj  gmock_jabbertest.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters  gmock_simtest.vcxproj  gmock_simtest.vcxproj.filters  gtest.vcxproj  gtest.vcxproj.filters
(+92 files in other folders)
